Fix z-index modal/button conflict

--- a/warehouse/static/sass/settings/_z-index.scss
+++ b/warehouse/static/sass/settings/_z-index.scss
@@ -25,14 +25,13 @@
 
 // sass-lint:disable indentation
 
-$z-index-scale: "tabs-border",
+$z-index-scale: "active-button",
+                "primary-button",
+                "tabs-border",
                 "history-line",
                 "history-node",
                 "callout-block",
                 "callout-block-border",
-                "button",
-                "active-button",
-                "primary-button",
                 "dropdown",
                 "sticky-top",
                 "dark-overlay",
